--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -39,7 +39,40 @@
     height: 100%;
    
 }
+.user-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height:auto;
+    margin: 0;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+.editinfo   {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20vw;
+  height: 3vh;
+  margin: 0.5rem;
+  padding: 0.5rem;
 
+
+  
+}
+.editButtons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 25vw;
+  height: 5vh;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
 .maindashboard button {
   height: 7vh;
   width: 40%;
@@ -88,7 +121,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     height:auto;
     
 }
