--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -67,7 +67,7 @@
   }
 
   input {
-    width: 100%;
+    width: 30%;
 
     padding: 10px;
     margin-bottom: 10px;
@@ -78,14 +78,18 @@
 
   
   .submit-button button {
-    background-color: var( --main-blue);
-    color: #fff;
-    padding: 30px 60px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 60px;
-    font-size: 18px;
-    cursor: pointer;
+    height: 7vh;
+    width: 40%;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-blue);
+    color: #ffffff;
+    font-weight: 700;
+    border-radius: 17.4rem;
+    border: 0;
   }
   .submit-button button:hover {
     background-color: transparent;
